--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=7928ba5f86595b57b5823f0e07a0f28d
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://bartlomiej.szyszkowski@yellows.eu:Wiosna2020@yellows.nazwa.pl
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -29,5 +29,13 @@ APP_SECRET=7928ba5f86595b57b5823f0e07a0f28d
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://'root':''@127.0.0.1:3306/yellows_tasks_todo?serverVersion=5.7
+DATABASE_URL=mysql://'root':''@127.0.0.1:3306/yellows_tasks_todo?mariadb-10.4.13
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+MAILER_RUL=smtp://poczta.nazwa.pl:465?encryption=ssl&auth_mode=login&username=&password=
+###< symfony/swiftmailer-bundle ###
