--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ MAILER_DSN=smtp://bartlomiej.szyszkowski@yellows.eu:Wiosna2020@yellows.nazwa.pl
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://'root':''@127.0.0.1:3306/yellows_tasks_todo?mariadb-10.4.13
+DATABASE_URL=mysql://'root':''@127.0.0.1:3306/yellows_tasks_todo_1?mariadb-10.4.13
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
