--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=7928ba5f86595b57b5823f0e07a0f28d
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://bartlomiej.szyszkowski@yellows.eu:Wiosna2020@yellows.nazwa.pl
+MAILER_DSN=smtp://04dc69d931b122:4f54f1eeb6190b@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -29,7 +29,7 @@ MAILER_DSN=smtp://bartlomiej.szyszkowski@yellows.eu:Wiosna2020@yellows.nazwa.pl
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://'root':''@127.0.0.1:3306/yellows_tasks_todo_1?mariadb-10.4.13
+DATABASE_URL='mysql://root:PAWber%40%237809@127.0.0.1:3306/todo?serverVersion=mariadb-10.5.15'
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
